feat: eda notebook corrected

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -451,27 +451,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 178,
-   "id": "57b9567f",
+   "cell_type": "markdown",
+   "id": "33ad9097",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 178,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# eliminar duplicados si existen\n",
-    "df = df.drop_duplicates().reset_index(drop=True)\n",
-    "\n",
-    "df.duplicated().sum()   "
+    "Estas líneas duplicadas es probable que sean datos válidos (distintos cardiotocogramas que arrojaron los mismos números), de modo que decidimos mantenerlos en el dataset."
    ]
   },
   {
@@ -996,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
    "id": "9bf3f6f1",
    "metadata": {},
    "outputs": [
@@ -1060,14 +1044,6 @@
    "id": "39d631d7",
    "metadata": {},
    "source": [
-    "# Guardar dataset limpio en data/processed/\n",
-    "from configure import DATA_DIR\n",
-    "\n",
-    "processed_path = DATA_DIR / \"processed\" / \"fetal_health_clean.csv\"\n",
-    "df.to_csv(processed_path, index=False)\n",
-    "print(f\"✅ Dataset guardado en: {processed_path}\")\n",
-    "print(f\"   Filas: {df.shape[0]} | Columnas: {df.shape[1]}\")## Conclusiones - Overview del Dataset\n",
-    "\n",
     "Calidad de los Datos:\n",
     "- Sin valores nulos: El dataset está completo (2126 filas × 22 columnas)\n",
     "- Duplicados encontrados: 13 \n",
@@ -1133,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": null,
    "id": "9f3fc5c7",
    "metadata": {},
    "outputs": [
@@ -1147,6 +1123,8 @@
     }
    ],
    "source": [
+    "# Guardar el dataset limpio\n",
+    "\n",
     "from configure import DATA_DIR\n",
     "processed_path = DATA_DIR / \"processed\" / \"fetal_health_clean.csv\"\n",
     "df.to_csv(processed_path, index=False)\n",
